--- a/Emna&Jonno/css/jonno.css
+++ b/Emna&Jonno/css/jonno.css
@@ -165,11 +165,22 @@ body
     text-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+.descricao
+{
+    font-family: 'Display-Regular';
+}
+
+html {
+  scroll-behavior: smooth; /* faz a animação automática */
+}
 
 
 
-.produtos {
-  display: flex;            /* Coloca lado a lado */
+
+.produtos 
+{
+  display: grid;            /* Coloca lado a lado */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 50px;                /* Espaço ENTRE as boxes */
   padding: 80px;            /* Margem interna em volta */
   margin-top: -60px;
@@ -177,9 +188,10 @@ body
   flex-wrap: wrap;          /* Faz as boxes quebrarem linha em telas pequenas */
 }
 
-.box {
+.box 
+{
   flex: 1;                  /* Cada box cresce igualmente */
-  width: 250px;         /* Largura mínima opcional */
+  min-width: 250px;         /* Largura mínima opcional */
   height: 500px;
   background: #ddd;
   border-radius: 5px;      /* Cantos arredondados */
@@ -190,19 +202,22 @@ body
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 1);
 }
 
-.box-img {
+.box-img 
+{
   height: 50%;        /* Metade da altura da box */
   overflow: hidden;
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
-.box-img img {
+.box-img img 
+{
   width: 100%;
   height: 100%;
   object-fit: cover;  /* Faz a imagem preencher sem distorcer */
 }
 
-.box-info {
+.box-info 
+{
   height: 50%;        /* Outra metade da box */
   padding: 10px;
   display: flex;
@@ -212,6 +227,40 @@ body
   color: white;
 }
 
+.box-info
+{
+  position: relative;
+  margin-top: 10px;
+  height: 40px;              /* altura fixa para evitar “pulos” */
+}
+
+.btn-comprar{
+  position: absolute;
+  top: 260%;
+  left: 25%;     /* centraliza horizontalmente */
+  background: #ffffff;
+  color: #000;
+  border-radius: 5px;
+  font-family: 'Display-Regular';
+  width: 50%;
+  height: 70%;
+  cursor: pointer;
+  opacity: 0;
+  transform: translateY(0px);
+  pointer-events: none; /* não clica enquanto invisível */
+  transition: all 0.4s ease;
+}
+
+.box:hover .preco{
+  opacity: 0;
+  transform: translateY(-200px);
+}
+
+.box:hover .btn-comprar{
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
 
 
 
