--- a/Emna&Jonno/css/jonno.css
+++ b/Emna&Jonno/css/jonno.css
@@ -1,332 +1,287 @@
-body{
-    font-family: 'PlayfairDisplay-semibold';
-    font-size: large;
-    background-color: #bebebe;
+/*--- fonts ---*/
+
+@font-face {
+    font-family: Playfair-Regular;
+    src: url(../fonts/PlayfairDisplay-Regular.ttf);
 }
 
-h1, h2, h3, h4, h5, h6, p{
-    cursor: pointer;
-}
-
-.col-md-6 img{
-    margin-top: 20px;
-    border-radius:20px;
-}
-
-/* Header nav start  */
-.navbar-brand img{
-    box-shadow: 5px 5px 10px #000;
-    -webkit-box-shadow: 5px 5px 10px #000;
-    -moz-box-shadow: 5px 5px 10px #000; 
-    width:50px;
-    height:50px;
-}
-a.nav-link {
-    margin-right: 20px;
-    font-weight: 700;
-    
-}
-.navbar-light .navbar-nav .active>.nav-link:hover{
-    color: #f1c40f;
-    
+@font-face {
+    font-family: Playfair-SemiBold;
+    src: url(../fonts/PlayfairDisplay-SemiBold.ttf);
 }
 
 
+/*--- header ---*/
 
-nav.fill ul li a.nav-link {
-    transition: all .5s;
-}
-    
-nav.fill ul li a.nav-link:after {
-    text-align: left;
-    content: '.';
-    margin: 0;
-    opacity: 0;
-}
-    
-nav.fill ul li a.nav-link:hover {
-    color: white;
-    z-index: 1;
-}
-    
-nav.fill ul li a.nav-link:hover:after {
-    z-index: -10;
-    animation: fill 1s forwards;
-    opacity: 1;
-}
-    
-nav.fill ul li a.nav-link {
-      position: relative;
-}
-    
-nav.fill ul li a.nav-link:after {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-      width: 0%;
-      content: '.';
-      color: transparent;
-      background: #aaa;
-      height: 1px;
-}
+/* Navbar */
 
-/* End  */
-
-
-/* section Mack book start  */
-
-section#mack-book{
-    margin-bottom: 100px;
-}
-
-.carousel-indicators li{
-    width: 20px;
-    height: 8px;
-    border: none;
-    border-radius: 4px;
-    background-color: #CECECE;
-}
-.carousel-indicators li.active{
-    width: 35px;
-    height: 10px;
-    border-radius: 8px; 
-    background-image: linear-gradient(145deg,#f1c40f,#e67e22);
-}
-
-.mack {
-    padding: 10% 4%;
-}
-
-.mack p {
-    margin-bottom: 30px;
-}
-
-.mack a.mack-btn {
-    font-weight: bold;
-    background-color: black;
-    color: white;
-    border: 2px solid black;
-    padding: 15px;
-    border-radius: 10px;
-    text-transform: uppercase;
-    transition: 1s;
-    cursor: pointer;
-}
-
-.mack a.mack-btn:hover {
-    background-color: white;
-    color: black;
-}
-
-svg.bi.bi-arrow-right {
-    color: white;
-    font-size: 20px;
-    transition: .5s;
-}
-
-a.mack-btn:hover svg.bi.bi-arrow-right{
-    transform: rotate(-180deg);
-    color: black;
-}
-
-/* End  */
-
-/* section Smart phone start  */
-
-section#smartphone{
-    margin-bottom: 100px;
-}
-
-.smartphone-header{
-    margin-bottom: 50px;
-}
-
-.smartphone-header h5{
-    font-weight: bold;
-    cursor: pointer;
-    background: -webkit-linear-gradient(145deg,#f1c40f,#e67e22);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-a.smartphone-btn {
-    font-weight: bold;
-    background-color: black;
-    color: white;
-    border: 2px solid black;
-    padding: 15px;
-    border-radius: 10px;
-    text-transform: uppercase;
-    transition: 1s;
-    cursor: pointer;
-}
-
-a.smartphone-btn:hover {
-    background-color: white;
-    color: black;
-}
-
-a.smartphone-btn:hover svg.bi.bi-arrow-right{
-    transform: rotate(-180deg);
-    color: black;
-}
-
-/* End  */
-
-/* section Laptop start  */
-
-section#laptop{
-    margin-bottom: 100px;
-}
-
-.laptop-header{
-    margin-bottom: 50px;
-}
-
-
-.laptop-header h5{
-    font-weight: bold;
-    cursor: pointer;
-    background: -webkit-linear-gradient(145deg,#f1c40f,#e67e22);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-a.laptop-btn {
-    font-weight: bold;
-    background-color: black;
-    color: white;
-    border: 2px solid black;
-    padding: 15px;
-    border-radius: 10px;
-    text-transform: uppercase;
-    transition: 1s;
-    cursor: pointer;
-}
-
-a.laptop-btn:hover {
-    background-color: white;
-    color: black;
-}
-
-a.laptop-btn:hover svg.bi.bi-arrow-right{
-    transform: rotate(-180deg);
-    color: black;
-}
-
-a.smartwhatch-btn{
-    font-weight: bold;
-    background-color: black;
-    color: white;
-    border: 2px solid black;
-    padding: 15px;
-    border-radius: 10px;
-    text-transform: uppercase;
-    transition: 1s;
-    cursor: pointer;
-   
-    
-}
-a.smartwhatch-btn:hover {
-    background-color: white;
-    color: black;
-}
-a.smartwhatch-btn:hover svg.bi.bi-arrow-right{
-    transform: rotate(-180deg);
-    color: black;
-}
-/* End  */
-
-/* Categories start  */
-
-.card{
-    box-shadow: 5px 5px 10px #030303;
-    -webkit-box-shadow: 5px 5px 10px #000000;
-    -moz-box-shadow: 5px 5px 10px #0076a3; 
-     border-radius:10px;
-     transform: all 0.5s ease;
-
-}
-.card-title{
-    color: #000;
-    font-weight: 600;
-}
-
-.card-img {
-    transition: transform 0.3s ease-in-out;
-}
-
-.card:hover .card-img {
-    transform: translateX(10px); /* Move 10px to the right */
-}
-
-.card-img-top{
-    transition: transform 0.3s ease-in-out;
-}
-
-.card:hover .card-img-top {
-    transform: translateX(10px); /* Move 10px to the right */
-}
-
-
-
-
-.card {
-    margin: 15px;
-    overflow: hidden; /* Ensure content does not overflow */
-}
-
-.card-deck {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-
-/* Footer  */
-footer {
+.navbar 
+{
     width: 100%;
-    padding: 5%;
-    margin-top:40px ;
+    background-color: rgba(240, 248, 255, 0.10);
+    backdrop-filter: blur(3px);
+    padding: 10px 0;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease-in-out;
+}
+  
+.navbar-container 
+{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.menu 
+{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+    gap: 40px;
+    background-color: rgba(240, 248, 255, 0.0);
+}
+  
+.menu li a 
+{
+    font-family: 'Playfair-Regular';
+    text-decoration: none;
+    color: #000000;
+    font-size: 13px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+
+.animacao:hover 
+{
+    color: rgb(255, 255, 255);
+} 
+
+ul 
+{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgba(240, 248, 255, 0.1);
+}
+  
+li 
+{
+    float: left;
+}
+  
+li a, .dropbtn 
+{
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
    
+}
+  
+li a:hover, .dropdown:hover .dropbtn 
+{
+    background-color: rgba(0, 0, 0, 0.0);
+    border-radius: 5px;
+    
+}
+  
+li.dropdown 
+{
+    display: inline-block;
+
+}
+  
+.dropdown-content 
+{
+    display: none;
+    position: absolute;
+    background-color: #dad5d5;
+    min-width: 160px;
+    box-shadow: 2px 8px 16px 0px rgba(14, 14, 14, 0.418);
+    z-index: 1;
+    border-radius: 5px;
+}
+  
+.dropdown-content a 
+{
+    color: rgb(78, 78, 78);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-family: 'Display-Regular';
+}
+  
+.dropdown-content a:hover {background-color: #252525;}
+  
+.dropdown:hover .dropdown-content 
+{
+    display: block;
+}
+
+.dropdown-content img
+{
+    width: 100px;
+    height: 100px;
     
 }
 
-#contact{
-    border:2px solid #000;
-    padding:6px;
-    margin-right:85%;
-    border-radius:8px;
-    font-size: 18px;
-    font-weight: bolder;
-    margin-bottom:40px;
-    cursor:copy;
-}
-@media screen {
-    #contact{
-        display: inline-block;
-        justify-content: center;
-    }
+
+/*--- main ---*/
+
+body
+{
+    background-color: #bebebe;
+
+    min-height: 100vh;
+    background-image: url(../img/fundo-branco-com-formas-de-linhas-luxuosas-douradas_1017-27144.png);
+    background-repeat: repeat;
+    background-position: center;
 }
 
-/* End  */
+.h1-titulo
+{
+    font-family: 'Display-SemiBold';
+    text-align: center;
+    text-shadow: 3px 3px rgba(0, 0, 0, 0.5);
+    font-size: 40px;
+}
 
-/* Nav animation */
+.h1
+{
+    font-family: 'Display-SemiBold';
+    text-align: left;
+    font-size: 34px;
+    margin-left: 80px;
+    text-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
+}
 
-@-webkit-keyframes fill {
-    0% {
-      width: 0%;
-      height: 1px;
-    }
-    50% {
-      width: 100%;
-      height: 1px;
-    }
-    100% {
-      width: 100%;
-      height: 100%;
-      background: #333;
-    }
-  }
+.descricao
+{
+    font-family: 'Display-Regular';
+}
+
+html {
+  scroll-behavior: smooth; /* faz a animação automática */
+}
+
+
+
+
+.produtos 
+{
+  display: grid;            /* Coloca lado a lado */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 50px;                /* Espaço ENTRE as boxes */
+  padding: 80px;            /* Margem interna em volta */
+  margin-top: -60px;
+  justify-content: center;  /* Centraliza no container */
+  flex-wrap: wrap;          /* Faz as boxes quebrarem linha em telas pequenas */
+}
+
+.box 
+{
+  flex: 1;                  /* Cada box cresce igualmente */
+  min-width: 250px;         /* Largura mínima opcional */
+  height: 500px;
+  background: #ddd;
+  border-radius: 5px;      /* Cantos arredondados */
+  padding: 0px;
+  overflow: hidden;
+  border: 1px solid white;
+  background-color: #000000;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 1);
+}
+
+.box-img 
+{
+  height: 50%;        /* Metade da altura da box */
+  overflow: hidden;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.box-img img 
+{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;  /* Faz a imagem preencher sem distorcer */
+}
+
+.box-info 
+{
+  height: 50%;        /* Outra metade da box */
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; /* Espaço entre título, descrição e preço */
+  text-align: center;
+  color: white;
+}
+
+.box-info
+{
+  position: relative;
+  margin-top: 10px;
+  height: 40px;              /* altura fixa para evitar “pulos” */
+}
+
+.btn-comprar{
+  position: absolute;
+  top: 260%;
+  left: 25%;     /* centraliza horizontalmente */
+  background: #ffffff;
+  color: #000;
+  border-radius: 5px;
+  font-family: 'Display-Regular';
+  width: 50%;
+  height: 70%;
+  cursor: pointer;
+  opacity: 0;
+  transform: translateY(0px);
+  pointer-events: none; /* não clica enquanto invisível */
+  transition: all 0.4s ease;
+}
+
+.box:hover .preco{
+  opacity: 0;
+  transform: translateY(-200px);
+}
+
+.box:hover .btn-comprar{
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+
+
+/*--- footer ---*/
+
+footer 
+{
+    width: 100%;
+    position: fixed;      
+    bottom: 0;           
+    left: 0;
+   
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+    z-index: 1000;       
+}
+
+.direitos-autorais 
+{
+    margin: 0;
+}
+
+
