--- a/Emna&Jonno/css/jonno.css
+++ b/Emna&Jonno/css/jonno.css
@@ -118,7 +118,7 @@ li.dropdown
     text-decoration: none;
     display: block;
     text-align: left;
-    font-family: 'Display-Regular';
+    font-family: 'Playfair-Regular';
 }
   
 .dropdown-content a:hover {background-color: #252525;}
@@ -140,17 +140,17 @@ li.dropdown
 
 body
 {
-    background-color: #bebebe;
+  background-color: #bebebe;
 
-    min-height: 100vh;
-    background-image: url(../img/fundo-branco-com-formas-de-linhas-luxuosas-douradas_1017-27144.png);
-    background-repeat: repeat;
-    background-position: center;
+  min-height: 100vh;
+  background-image: url(../img/fundo-branco-com-formas-de-linhas-luxuosas-douradas_1017-27144.png);
+  background-repeat: repeat;
+  background-position: center;
 }
 
 .h1-titulo
 {
-    font-family: 'Display-SemiBold';
+    font-family: 'Playfair-SemiBold';
     text-align: center;
     text-shadow: 3px 3px rgba(0, 0, 0, 0.5);
     font-size: 40px;
@@ -158,7 +158,7 @@ body
 
 .h1
 {
-    font-family: 'Display-SemiBold';
+    font-family: 'Playfair-SemiBold';
     text-align: left;
     font-size: 34px;
     margin-left: 80px;
@@ -167,7 +167,7 @@ body
 
 .descricao
 {
-    font-family: 'Display-Regular';
+    font-family: 'Playfair-Regular';
 }
 
 html {
@@ -234,14 +234,15 @@ html {
   height: 40px;              /* altura fixa para evitar “pulos” */
 }
 
-.btn-comprar{
+.b-comprar
+{
   position: absolute;
   top: 260%;
-  left: 25%;     /* centraliza horizontalmente */
+  left: 25%;
   background: #ffffff;
   color: #000;
   border-radius: 5px;
-  font-family: 'Display-Regular';
+  font-family: 'Playfair-Regular';
   width: 50%;
   height: 70%;
   cursor: pointer;
@@ -251,15 +252,39 @@ html {
   transition: all 0.4s ease;
 }
 
-.box:hover .preco{
+.box:hover .preco
+{
   opacity: 0;
   transform: translateY(-200px);
 }
 
-.box:hover .btn-comprar{
+.box:hover .b-comprar
+{
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
+}
+
+.divVerMais
+{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.BVerMais 
+{
+  padding: 10px 20px;
+  border: 2px solid black;
+  background: #ffffff;
+  color: black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.hidden 
+{
+  display: none;
 }
 
 
@@ -284,4 +309,6 @@ footer
     margin: 0;
 }
 
+
+/*--- Responsividade ---*/
 
