--- a/Emna&Jonno/css/carrinho.css
+++ b/Emna&Jonno/css/carrinho.css
@@ -1,15 +1,45 @@
 
+/*--- fonts ---*/
 
-*
-{ margin: 50px; padding: 18px; box-sizing: border-box; }
-    body { font-family: 'Open Sans', sans-serif; background: #f7f7f7; color: #222; display: flex; flex-direction: column; min-height: 100vh; }
+@font-face 
+{
+    font-family: Playfair-Regular;
+    src: url(../fonts/PlayfairDisplay-Regular.ttf);
+}
 
-    header {
-      background: #000; color: #fff;
-      font-family: 'Playfair Display', serif;
-    }
+@font-face 
+{
+    font-family: Playfair-SemiBold;
+    src: url(../fonts/PlayfairDisplay-SemiBold.ttf);
+}
 
-    .top-bar {
+/* Header */
+
+.header
+{
+    width: 100%;
+    height: 63px;
+    background-color: rgba(240, 248, 255, 0.10);
+    backdrop-filter: blur(3px);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    border-bottom: 1px solid darkgray;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.h2-header
+{
+    font-family: 'Playfair-SemiBold';
+    text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.5);
+    margin-top: 12px;
+    margin-left: 25px;
+}
+
+/* Main */
+
+.top-bar 
+    {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -20,18 +50,21 @@
 
 
     
-    .logo {
+    .logo 
+    {
       font-size: 1.8rem;
       letter-spacing: 1.5px;
     }
 
-    .icon-nav {
+    .icon-nav 
+    {
       display: flex;
       align-items: center;
       gap: 1.5rem;
     }
 
-    .nav-icon {
+    .nav-icon 
+    {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -41,11 +74,13 @@
       position: relative;
     }
 
-    .nav-icon span:first-child {
+    .nav-icon span:first-child 
+    {
       font-size: 1.5rem;
     }
 
-    .nav-icon .badge {
+    .nav-icon .badge 
+    {
       position: absolute;
       top: 8px;
       right: 10px;
@@ -56,31 +91,21 @@
       padding: 0.2rem 0.5rem;
     }
 
-    main { 
-      border : 6px solid #000;
-      flex: 10; display: flex; gap: 2rem; padding: 2rem; flex-wrap: wrap; justify-content: center; }
-
  
-      body{
+      body
+      {
         background-color: #f7f7f7;
        
         min-height: 100vh;
         background-image: url(../img/fundo-branco-com-formas-de-linhas-luxuosas-douradas_1017-27144.png);
         background-repeat: repeat;
         background-position: center;
-       }
+      }
        
-    
-
-
-
-
-
-
-
     .remove-btn:hover { color: #a12727; }
 
-    .cart-total {
+    .cart-total 
+    {
       text-align: right;
       font-size: 1.4rem;
       font-weight: 700;
@@ -88,7 +113,8 @@
       color: #333;
     }
 
-    .checkout-btn {
+    .checkout-btn 
+    {
       background: #000;
       color: #fff;
       border: none;
@@ -102,14 +128,17 @@
 
     }
 
-    .checkout-btn:hover {
+    .checkout-btn:hover 
+    {
       background: #c5a880;
       color: #000;
     }
 
-    @media (max-width: 1024px) {
+    @media (max-width: 1024px) 
+    {
       main { flex-direction: column; align-items: center; }
-      .cart {
+      .cart 
+      {
         width: 90%;
         max-height: auto;
         position: static;
