--- a/Emna&Jonno/css/carrinho.css
+++ b/Emna&Jonno/css/carrinho.css
@@ -36,6 +36,18 @@
     margin-left: 25px;
 }
 
+a
+{
+  color: #000;
+  text-decoration: none;
+}
+
+a:visited
+{
+  color: #000;
+  text-decoration: none;
+}
+
 /* Main */
 
 .top-bar 
@@ -47,7 +59,10 @@
       flex-wrap: wrap;
     }
 
-
+    main
+    {
+      margin-top: 100px;
+    }
 
     
     .logo 
@@ -106,11 +121,9 @@
 
     .cart-total 
     {
-      text-align: right;
       font-size: 1.4rem;
       font-weight: 700;
-      margin-bottom: 1rem;
-      color: #333;
+      color: #000000;
     }
 
     .checkout-btn 
@@ -132,6 +145,12 @@
     {
       background: #c5a880;
       color: #000;
+    }
+
+    .alinharItens
+    {
+      display: flex;
+      justify-content: space-around;
     }
 
     @media (max-width: 1024px) 
