--- a/Emna&Jonno/css/jonno.css
+++ b/Emna&Jonno/css/jonno.css
@@ -375,6 +375,18 @@ footer
   .menu
   {
     display: none;
+    flex-direction: column;
+    position: absolute;
+    margin-top: 55px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(1px);
+  }
+
+  .menu.active
+  {
+    display: flex;
   }
 
   #main-menu
